--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ header {
   background-color: #292929;
 }
 
-#contadorConhecer, #contadorNamoro {
-    border: solid 2px #ca89aa;
-    border-radius: 12px;
+#contadorConhecer,
+#contadorNamoro {
+  border: solid 2px #ca89aa;
+  border-radius: 12px;
   font-size: 1.5rem;
   margin-top: 10px;
   color: #ff69b4;
@@ -32,7 +33,8 @@ section {
   text-align: center;
 }
 
-h1, h2 {
+h1,
+h2 {
   color: #ff69b4;
 }
 
@@ -97,9 +99,17 @@ h1, h2 {
 }
 
 @keyframes pulse {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.08); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.08);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 canvas#coracoes {
@@ -132,7 +142,7 @@ canvas#coracoes {
   transition: transform 1s ease;
   z-index: 3;
   border-bottom: 2px solid #ffb5d7;
-  box-shadow: inset 0 -2px 5px rgba(0,0,0,0.1);
+  box-shadow: inset 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .frente {
@@ -143,7 +153,7 @@ canvas#coracoes {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   z-index: 1;
   border-radius: 0 0 16px 16px;
-  box-shadow: inset 0 2px 5px rgba(0,0,0,0.05);
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.05);
 }
 
 .conteudo {
@@ -178,5 +188,28 @@ canvas#coracoes {
 
 
 
+/* ------------------------------------------------*/
 
+.carousel-container {
+  width: 100%;
+  overflow: hidden;
+  padding: 10px; /* cria "preview" das laterais */
+  box-sizing: border-box;
+}
+
+.carousel-track {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-track img {
+  width: 80vw;
+  max-width: 300px;
+  height: auto;
+  border-radius: 12px;
+  object-fit: cover;
+  flex-shrink: 0;
+  margin: 0 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
 
